Results/Tamaulipas/forecast/experiments/exp05_multinodo_victoria/v1/summary.md
# exp05_multinodo_victoria — v1

XGBoost pooled sobre bloque 5×5 (25 nodos) centrado en Cd. Victoria. Feature-set base+nocturno; el nodo se describe con lat/lon/msnm.

- Alcance: 25 nodos (bloque `victoria5x5`) | feature-set: `base-nocturno` (45 features) | best_iteration: 293
- Bloques: ['base', 'nocturno'] | modelo: xgboost | cuantiles: —

**Test global (P50 si cuantílico):** RMSE 78.92 vs persistence 84.89 W/m² · skill 0.0704 · R² 0.928

## Métricas globales (val + test)

| segmento         |      n |   RMSE_persistence |   RMSE_modelo |   MAE_modelo |   MBE_modelo |   R2_persistence |   R2_modelo |   skill | split   |
|:-----------------|-------:|-------------------:|--------------:|-------------:|-------------:|-----------------:|------------:|--------:|:--------|
| global           | 102836 |             85.252 |        77.865 |       42.836 |        3.49  |            0.92  |       0.934 |   0.087 | val     |
| limpio_ff0       |  93630 |             86.663 |        79.087 |       43.341 |        2.763 |            0.912 |       0.927 |   0.087 | val     |
| rellenado_ff_pos |   9206 |             69.295 |        64.131 |       37.703 |       10.884 |            0.869 |       0.887 |   0.075 | val     |
| global           | 103085 |             84.891 |        78.918 |       46.505 |        1.46  |            0.916 |       0.928 |   0.07  | test    |
| limpio_ff0       |  93650 |             86.341 |        80.51  |       47.791 |        1.394 |            0.907 |       0.919 |   0.068 | test    |
| rellenado_ff_pos |   9435 |             68.865 |        60.911 |       33.742 |        2.112 |            0.873 |       0.901 |   0.115 | test    |

## Por régimen de nubosidad (test)

| regimen_nubosidad   |     n |   RMSE_modelo |   RMSE_persistence |   MAE_modelo |   R2_modelo |   skill |
|:--------------------|------:|--------------:|-------------------:|-------------:|------------:|--------:|
| cubierto (kt<0.3)   |  7330 |       147.389 |            139.788 |      108.348 |      -4.139 |  -0.054 |
| parcial (0.3-0.7)   | 17980 |       111.267 |            124.68  |       77.836 |       0.578 |   0.108 |
| despejado (kt>=0.7) | 77775 |        57.84  |             64.158 |       33.434 |       0.956 |   0.098 |

## Por régimen de rampa (test)

| regimen_rampa             |     n |   RMSE_modelo |   RMSE_persistence |   MAE_modelo |   R2_modelo |   skill |
|:--------------------------|------:|--------------:|-------------------:|-------------:|------------:|--------:|
| rampa suave (<0.1)        | 71063 |        39.63  |             23.794 |       25.291 |       0.981 |  -0.666 |
| rampa moderada (0.1-0.25) | 19617 |        93.186 |            100.604 |       73.194 |       0.865 |   0.074 |
| rampa fuerte (>0.25)      | 12380 |       170.543 |            201.788 |      126.053 |       0.377 |   0.155 |

## Skill por nodo (modelo pooled, test)

skill medio 0.0702 · min 0.0631 · max 0.0798 (25 nodos)

|   nodo_id |    n |   RMSE_modelo |   RMSE_persistence |   R2_modelo |   skill |
|----------:|-----:|--------------:|-------------------:|------------:|--------:|
|      1628 | 4124 |        82.909 |             90.1   |       0.918 |   0.08  |
|      1629 | 4123 |        83.229 |             89.43  |       0.918 |   0.069 |
|      1630 | 4123 |        78.963 |             84.768 |       0.927 |   0.068 |
|      1631 | 4123 |        77.143 |             82.743 |       0.931 |   0.068 |
|      1632 | 4125 |        75.43  |             80.513 |       0.934 |   0.063 |
|      1681 | 4125 |        81.547 |             88.553 |       0.922 |   0.079 |
|      1682 | 4123 |        77.563 |             83.318 |       0.931 |   0.069 |
|      1683 | 4123 |        77.801 |             83.223 |       0.93  |   0.065 |
|      1684 | 4122 |        76.343 |             81.591 |       0.932 |   0.064 |
|      1685 | 4124 |        76.245 |             81.406 |       0.932 |   0.063 |
|      1734 | 4124 |        82.419 |             88.69  |       0.92  |   0.071 |
|      1735 | 4123 |        81.301 |             87.321 |       0.924 |   0.069 |
|      1736 | 4123 |        78.774 |             84.873 |       0.928 |   0.072 |
|      1737 | 4125 |        76.167 |             81.299 |       0.932 |   0.063 |
|      1738 | 4124 |        75.192 |             80.51  |       0.934 |   0.066 |
|      1786 | 4124 |        83.66  |             89.551 |       0.918 |   0.066 |
|      1787 | 4123 |        80.06  |             86.12  |       0.927 |   0.07  |
|      1788 | 4123 |        77.898 |             83.834 |       0.93  |   0.071 |
|      1789 | 4122 |        77.273 |             83.265 |       0.931 |   0.072 |
|      1790 | 4124 |        75.464 |             81.406 |       0.934 |   0.073 |
|      1832 | 4124 |        83.355 |             89.902 |       0.918 |   0.073 |
|      1833 | 4123 |        80.052 |             86.435 |       0.926 |   0.074 |
|      1834 | 4122 |        79.427 |             85.746 |       0.927 |   0.074 |
|      1835 | 4122 |        78.055 |             84.549 |       0.93  |   0.077 |
|      1836 | 4124 |        75.513 |             81.693 |       0.934 |   0.076 |

## Top 15 importancias (gain)

|                        |      0 |
|:-----------------------|-------:|
| kt_lag1                | 0.6346 |
| kt_last_op             | 0.0801 |
| cloud_type_lag1        | 0.0478 |
| cos_hour               | 0.0133 |
| hour                   | 0.0093 |
| temperature_lag1       | 0.0086 |
| temperature_max_12h    | 0.0084 |
| pressure_tend_12h      | 0.0081 |
| wind_direction_lag1    | 0.008  |
| sin_hour               | 0.0076 |
| ssa_lag1               | 0.0076 |
| solar_zenith_angle     | 0.0073 |
| month                  | 0.0072 |
| relative_humidity_lag1 | 0.0069 |
| asymmetry_lag1         | 0.0067 |
