Results/Tamaulipas/forecast/experiments/exp05_multinodo_victoria/v2/summary.md
# exp05_multinodo_victoria — v2

Igual que v1 pero bloque 12×12 (144 nodos). Mide el efecto de ESCALAR el número de nodos con las mismas features.

- Alcance: 144 nodos (bloque `victoria12x12`) | feature-set: `base-nocturno` (45 features) | best_iteration: 303
- Bloques: ['base', 'nocturno'] | modelo: xgboost | cuantiles: —

**Test global (P50 si cuantílico):** RMSE 79.10 vs persistence 86.41 W/m² · skill 0.0847 · R² 0.927

## Métricas globales (val + test)

| segmento         |      n |   RMSE_persistence |   RMSE_modelo |   MAE_modelo |   MBE_modelo |   R2_persistence |   R2_modelo |   skill | split   |
|:-----------------|-------:|-------------------:|--------------:|-------------:|-------------:|-----------------:|------------:|--------:|:--------|
| global           | 592312 |             86.705 |        78.255 |       43.285 |        3.764 |            0.917 |       0.933 |   0.097 | val     |
| limpio_ff0       | 539027 |             88.111 |        79.451 |       43.831 |        2.982 |            0.909 |       0.926 |   0.098 | val     |
| rellenado_ff_pos |  53285 |             70.935 |        64.925 |       37.762 |       11.682 |            0.862 |       0.884 |   0.085 | val     |
| global           | 593770 |             86.414 |        79.096 |       46.605 |        1.975 |            0.913 |       0.927 |   0.085 | test    |
| limpio_ff0       | 538873 |             87.952 |        80.646 |       47.81  |        1.977 |            0.903 |       0.919 |   0.083 | test    |
| rellenado_ff_pos |  54897 |             69.529 |        61.843 |       34.777 |        1.955 |            0.874 |       0.901 |   0.111 | test    |

## Por régimen de nubosidad (test)

| regimen_nubosidad   |      n |   RMSE_modelo |   RMSE_persistence |   MAE_modelo |   R2_modelo |   skill |
|:--------------------|-------:|--------------:|-------------------:|-------------:|------------:|--------:|
| cubierto (kt<0.3)   |  40469 |       148.451 |            141.4   |      109.316 |      -4.14  |  -0.05  |
| parcial (0.3-0.7)   | 104991 |       113.107 |            127.592 |       80.073 |       0.561 |   0.114 |
| despejado (kt>=0.7) | 448310 |        57.45  |             65.366 |       33.106 |       0.957 |   0.121 |

## Por régimen de rampa (test)

| regimen_rampa             |      n |   RMSE_modelo |   RMSE_persistence |   MAE_modelo |   R2_modelo |   skill |
|:--------------------------|-------:|--------------:|-------------------:|-------------:|------------:|--------:|
| rampa suave (<0.1)        | 408158 |        39.287 |             23.693 |       24.879 |       0.981 |  -0.658 |
| rampa moderada (0.1-0.25) | 112163 |        92.925 |            101.933 |       72.963 |       0.866 |   0.088 |
| rampa fuerte (>0.25)      |  73305 |       169.903 |            203.62  |      127.3   |       0.394 |   0.166 |

## Skill por nodo (modelo pooled, test)

skill medio 0.0846 · min 0.0591 · max 0.1068 (144 nodos)

|   nodo_id |    n |   RMSE_modelo |   RMSE_persistence |   R2_modelo |   skill |
|----------:|-----:|--------------:|-------------------:|------------:|--------:|
|      1409 | 4125 |        74.524 |             81.77  |       0.934 |   0.089 |
|      1410 | 4123 |        78.586 |             85.673 |       0.927 |   0.083 |
|      1411 | 4124 |        82.095 |             89.992 |       0.919 |   0.088 |
|      1412 | 4123 |        83.644 |             91.422 |       0.916 |   0.085 |
|      1413 | 4125 |        81.318 |             88.803 |       0.922 |   0.084 |
|      1414 | 4123 |        81.196 |             89.382 |       0.923 |   0.092 |
|      1415 | 4124 |        80.188 |             88.535 |       0.925 |   0.094 |
|      1463 | 4125 |        75.119 |             81.998 |       0.934 |   0.084 |
|      1464 | 4124 |        77.427 |             84.542 |       0.928 |   0.084 |
|      1465 | 4122 |        82.958 |             91.281 |       0.918 |   0.091 |
|      1466 | 4123 |        82.811 |             91.251 |       0.916 |   0.092 |
|      1467 | 4123 |        81.45  |             89.729 |       0.918 |   0.092 |
|      1468 | 4124 |        78.782 |             86.94  |       0.926 |   0.094 |
|      1469 | 4122 |        80.095 |             88.875 |       0.925 |   0.099 |
|      1470 | 4124 |        78.508 |             86.316 |       0.929 |   0.09  |
|      1471 | 4124 |        78.383 |             87.754 |       0.929 |   0.107 |
|      1517 | 4126 |        74.491 |             81.747 |       0.936 |   0.089 |
|      1518 | 4125 |        75.338 |             82.024 |       0.933 |   0.082 |
|      1519 | 4124 |        77.278 |             84.176 |       0.928 |   0.082 |
|      1520 | 4122 |        80.134 |             87.642 |       0.923 |   0.086 |
|      1521 | 4123 |        81.129 |             88.348 |       0.92  |   0.082 |
|      1522 | 4124 |        82.066 |             90.122 |       0.921 |   0.089 |
|      1523 | 4124 |        80.422 |             87.635 |       0.924 |   0.082 |
|      1524 | 4124 |        79.134 |             86.421 |       0.926 |   0.084 |
|      1525 | 4124 |        75.086 |             82.122 |       0.935 |   0.086 |
|      1526 | 4123 |        77.687 |             85.917 |       0.93  |   0.096 |
|      1527 | 4124 |        77.575 |             86.137 |       0.93  |   0.099 |
|      1570 | 4124 |        76.643 |             83.623 |       0.933 |   0.083 |
|      1571 | 4125 |        75.127 |             81.578 |       0.935 |   0.079 |
|      1572 | 4125 |        74.547 |             80.446 |       0.935 |   0.073 |
|      1573 | 4125 |        76.164 |             82.514 |       0.931 |   0.077 |
|      1574 | 4122 |        78.96  |             85.885 |       0.927 |   0.081 |
|      1575 | 4123 |        82.166 |             90.077 |       0.92  |   0.088 |
|      1576 | 4124 |        77.379 |             83.783 |       0.931 |   0.076 |
|      1577 | 4124 |        78.164 |             84.391 |       0.929 |   0.074 |
|      1578 | 4125 |        78.118 |             84.122 |       0.929 |   0.071 |
|      1579 | 4124 |        74.734 |             80.592 |       0.935 |   0.073 |
|      1580 | 4123 |        73.568 |             80.47  |       0.937 |   0.086 |
|      1581 | 4124 |        74.634 |             82.238 |       0.935 |   0.092 |
|      1582 | 4124 |        74.87  |             82.629 |       0.934 |   0.094 |
|      1624 | 4123 |        79.243 |             86.454 |       0.928 |   0.083 |
|      1625 | 4124 |        77.282 |             84.515 |       0.931 |   0.086 |
|      1626 | 4124 |        76.961 |             83.694 |       0.932 |   0.08  |
|      1627 | 4124 |        78.585 |             85.508 |       0.928 |   0.081 |
|      1628 | 4124 |        82.132 |             90.1   |       0.919 |   0.088 |
|      1629 | 4123 |        82.676 |             89.43  |       0.92  |   0.076 |
|      1630 | 4123 |        78.735 |             84.768 |       0.928 |   0.071 |
|      1631 | 4123 |        77.257 |             82.743 |       0.931 |   0.066 |
|      1632 | 4125 |        75.207 |             80.513 |       0.935 |   0.066 |
|      1633 | 4124 |        72.813 |             78.22  |       0.939 |   0.069 |
|      1634 | 4124 |        73.251 |             79.784 |       0.938 |   0.082 |
|      1635 | 4124 |        73.536 |             80.724 |       0.938 |   0.089 |
|      1636 | 4124 |        74.747 |             81.984 |       0.935 |   0.088 |
|      1677 | 4124 |        77.442 |             84.89  |       0.931 |   0.088 |
|      1678 | 4123 |        80.839 |             88.522 |       0.925 |   0.087 |
|      1679 | 4122 |        78.844 |             85.959 |       0.929 |   0.083 |
|      1680 | 4125 |        82.055 |             90.165 |       0.919 |   0.09  |
|      1681 | 4125 |        81.464 |             88.553 |       0.922 |   0.08  |
|      1682 | 4123 |        77.578 |             83.318 |       0.931 |   0.069 |
|      1683 | 4123 |        77.532 |             83.223 |       0.93  |   0.068 |
|      1684 | 4122 |        76.034 |             81.591 |       0.933 |   0.068 |
|      1685 | 4124 |        75.876 |             81.406 |       0.933 |   0.068 |
|      1686 | 4124 |        73.898 |             79.844 |       0.937 |   0.074 |
|      1687 | 4124 |        73.216 |             79.959 |       0.938 |   0.084 |
|      1688 | 4122 |        74.27  |             81.627 |       0.936 |   0.09  |
|      1689 | 4124 |        75.677 |             83.142 |       0.934 |   0.09  |
|      1730 | 4123 |        80.489 |             89.279 |       0.924 |   0.098 |
|      1731 | 4123 |        82.398 |             90.98  |       0.921 |   0.094 |
|      1732 | 4122 |        82.039 |             90.698 |       0.923 |   0.095 |
|      1733 | 4125 |        87.983 |             95.529 |       0.907 |   0.079 |
|      1734 | 4124 |        82.012 |             88.69  |       0.921 |   0.075 |
|      1735 | 4123 |        81.072 |             87.321 |       0.924 |   0.072 |
|      1736 | 4123 |        78.472 |             84.873 |       0.928 |   0.075 |
|      1737 | 4125 |        75.735 |             81.299 |       0.933 |   0.068 |
|      1738 | 4124 |        74.921 |             80.51  |       0.934 |   0.069 |
|      1739 | 4124 |        74.537 |             80.875 |       0.935 |   0.078 |
|      1740 | 4123 |        73.748 |             80.349 |       0.937 |   0.082 |
|      1741 | 4122 |        73.743 |             80.754 |       0.937 |   0.087 |
|      1742 | 4124 |        74.755 |             82.064 |       0.935 |   0.089 |
|      1782 | 4123 |        82.21  |             90.539 |       0.921 |   0.092 |
|      1783 | 4123 |        80.218 |             88.174 |       0.926 |   0.09  |
|      1784 | 4121 |        88.638 |             97.271 |       0.905 |   0.089 |
|      1785 | 4125 |        88.202 |             95.409 |       0.904 |   0.076 |
|      1786 | 4124 |        82.849 |             89.551 |       0.919 |   0.075 |
|      1787 | 4123 |        79.26  |             86.12  |       0.928 |   0.08  |
|      1788 | 4123 |        77.416 |             83.834 |       0.93  |   0.077 |
|      1789 | 4122 |        76.649 |             83.265 |       0.932 |   0.079 |
|      1790 | 4124 |        75.018 |             81.406 |       0.935 |   0.078 |
|      1791 | 4124 |        73.579 |             79.252 |       0.937 |   0.072 |
|      1792 | 4123 |        73.662 |             80.41  |       0.937 |   0.084 |
|      1793 | 4122 |        73.598 |             80.999 |       0.937 |   0.091 |
|      1794 | 4123 |        74.764 |             81.984 |       0.935 |   0.088 |
|      1828 | 4123 |        84.093 |             93.043 |       0.919 |   0.096 |
|      1829 | 4123 |        81.538 |             89.561 |       0.924 |   0.09  |
|      1830 | 4122 |        88.558 |             96.665 |       0.904 |   0.084 |
|      1831 | 4123 |        85.593 |             92.897 |       0.912 |   0.079 |
|      1832 | 4124 |        82.652 |             89.902 |       0.92  |   0.081 |
|      1833 | 4123 |        79.267 |             86.435 |       0.928 |   0.083 |
|      1834 | 4122 |        78.753 |             85.746 |       0.928 |   0.082 |
|      1835 | 4122 |        77.379 |             84.549 |       0.931 |   0.085 |
|      1836 | 4124 |        75.108 |             81.693 |       0.935 |   0.081 |
|      1837 | 4125 |        74.991 |             81.456 |       0.935 |   0.079 |
|      1838 | 4123 |        75.354 |             82.159 |       0.934 |   0.083 |
|      1839 | 4121 |        75.56  |             83.242 |       0.934 |   0.092 |
|      1840 | 4122 |        76.082 |             83.741 |       0.933 |   0.091 |
|      1872 | 4123 |        88.39  |             97.855 |       0.91  |   0.097 |
|      1873 | 4123 |        87.195 |             95.134 |       0.908 |   0.083 |
|      1874 | 4122 |        94.23  |            101.805 |       0.89  |   0.074 |
|      1875 | 4124 |        83.658 |             90.579 |       0.917 |   0.076 |
|      1876 | 4124 |        80.069 |             86.492 |       0.927 |   0.074 |
|      1877 | 4124 |        80.638 |             87.78  |       0.925 |   0.081 |
|      1878 | 4122 |        80.015 |             87.814 |       0.926 |   0.089 |
|      1879 | 4123 |        78.582 |             86.635 |       0.929 |   0.093 |
|      1880 | 4124 |        77.883 |             85.615 |       0.93  |   0.09  |
|      1881 | 4125 |        75.83  |             83.054 |       0.934 |   0.087 |
|      1882 | 4122 |        74.858 |             81.995 |       0.935 |   0.087 |
|      1883 | 4124 |        75.712 |             83.498 |       0.934 |   0.093 |
|      1917 | 4122 |        91.663 |             97.688 |       0.893 |   0.062 |
|      1918 | 4123 |        90.514 |             96.195 |       0.899 |   0.059 |
|      1919 | 4124 |        84.671 |             91.316 |       0.917 |   0.073 |
|      1920 | 4124 |        82.027 |             89.417 |       0.923 |   0.083 |
|      1921 | 4123 |        81.482 |             89.275 |       0.924 |   0.087 |
|      1922 | 4123 |        79.567 |             88.392 |       0.928 |   0.1   |
|      1923 | 4122 |        79.384 |             87.684 |       0.928 |   0.095 |
|      1924 | 4124 |        77.946 |             85.997 |       0.931 |   0.094 |
|      1925 | 4123 |        76.221 |             83.431 |       0.933 |   0.086 |
|      1926 | 4124 |        76.192 |             84.042 |       0.933 |   0.093 |
|      1927 | 4124 |        73.835 |             80.76  |       0.937 |   0.086 |
|      1961 | 4123 |        87.953 |             95.101 |       0.908 |   0.075 |
|      1962 | 4124 |        83.229 |             90.237 |       0.919 |   0.078 |
|      1963 | 4124 |        80.878 |             88.758 |       0.925 |   0.089 |
|      1964 | 4122 |        81.784 |             90.732 |       0.924 |   0.099 |
|      1965 | 4123 |        80.425 |             89.475 |       0.927 |   0.101 |
|      1966 | 4123 |        78.618 |             87.53  |       0.93  |   0.102 |
|      1967 | 4123 |        77.784 |             86.385 |       0.931 |   0.1   |
|      1968 | 4122 |        76.886 |             84.815 |       0.932 |   0.093 |
|      1969 | 4124 |        76.029 |             84.016 |       0.933 |   0.095 |
|      2006 | 4123 |        82.449 |             89.393 |       0.922 |   0.078 |
|      2007 | 4124 |        81.636 |             89.336 |       0.924 |   0.086 |
|      2008 | 4121 |        79.598 |             88.398 |       0.928 |   0.1   |
|      2009 | 4123 |        78.882 |             87.722 |       0.929 |   0.101 |
|      2010 | 4123 |        78.708 |             87.669 |       0.929 |   0.102 |
|      2011 | 4121 |        79.255 |             87.747 |       0.928 |   0.097 |
|      2012 | 4122 |        77.086 |             84.839 |       0.932 |   0.091 |

## Top 15 importancias (gain)

|                         |      0 |
|:------------------------|-------:|
| kt_lag1                 | 0.6449 |
| kt_last_op              | 0.097  |
| cloud_type_lag1         | 0.0436 |
| cos_hour                | 0.0137 |
| sin_hour                | 0.0107 |
| hour                    | 0.0086 |
| temperature_lag1        | 0.0077 |
| temperature_max_12h     | 0.0074 |
| wind_direction_lag1     | 0.0072 |
| ssa_lag1                | 0.0071 |
| relative_humidity_lag1  | 0.007  |
| kt_lag24                | 0.0069 |
| pressure_tend_12h       | 0.0068 |
| precipitable_water_lag1 | 0.0065 |
| clearsky_ghi            | 0.0064 |
